all good now : next steps brands  and products

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -133,7 +133,7 @@
             <div class="profile-box">
                 <div class="header-promo">
                     <h1 style="">My Promotions</h1>
-                    <div
+                    <div class="promo-controls-container"
                         style="display:flex;flex-direction: row;/* justify-content: space-around; */align-items: center;min-width:fit-content;">
                         <button class="multiselect-header filter-icon">Find in table <span> 🔍</span></button>
                         <a href="create-promo.html" class="create-button">➕ New Promo
