brands and products in the profile page

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -9,44 +9,6 @@
     <link rel="icon" href="img/favicon%20small.ico" type="image/png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-mart@latest/css/emoji-mart.css">
 
-    <!-- Styles for the new in-table filter UI -->
-    <style>
-        #userPromosTable th {
-            position: relative;
-        }
-
-        input[type="text"],
-        textarea,
-        select {
-            padding: 4px;
-        }
-
-        .filter-icon {
-            cursor: pointer;
-            font-size: 14px;
-            margin-left: 12px;
-            display: inline-block;
-        }
-
-        .filter-row td {
-            background-color: #f8f9fa;
-        }
-
-        .column-filter {
-            width: 100%;
-            border-radius: 4px;
-            font-size: 7px;
-        }
-
-        .create-button:hover {
-            background-color: #27ae60;
-        }
-
-        .create-button {
-            background-color: #31d14c;
-            text-decoration: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -124,7 +86,12 @@
                 <a href="team.html">
                     <button class="AccessYellowButton" style="width:80%;">Manage my team</button>
                 </a>
-                <button id="" class="upload-button" style="width:80%;"></button>
+                <a href="brands.html">
+                    <button id="" class="upload-button" style="width:80%;">Manage Brands 🏷️</button>
+                </a>
+                <a href="products.html">
+                    <button id="" class="upload-button" style="width:80%;">Manage Products 🍺</button>
+                </a>
                 <p id="profileMessage" class="auth-message"></p>
             </div>
         </div>
