catalog view instead

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -86,12 +86,10 @@
                 <a href="team.html">
                     <button class="AccessYellowButton" style="width:80%;">Manage my team</button>
                 </a>
-                <a href="brands.html">
-                    <button id="" class="upload-button" style="width:80%;">Manage Brands 🏷️</button>
+                <a href="catalog.html">
+                    <button id="Manage_brands" class="upload-button" style="width:80%;">Manage Brands/SKUs</button>
                 </a>
-                <a href="products.html">
-                    <button id="" class="upload-button" style="width:80%;">Manage Products 🍺</button>
-                </a>
+
                 <p id="profileMessage" class="auth-message"></p>
             </div>
         </div>
