long and tidious process to get there

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -87,7 +87,7 @@
                     <button class="AccessYellowButton" style="width:80%;">Manage my team</button>
                 </a>
                 <a href="catalog.html">
-                    <button id="Manage_brands" class="upload-button" style="width:80%;">Manage Brands/SKUs</button>
+                    <button id="Managebrands" class="upload-button" style="width:80%;">Manage Brands/SKUs</button>
                 </a>
 
                 <p id="profileMessage" class="auth-message"></p>
