good progress on brands and products

--- a/promo-timeline-app/src/catalog.html
+++ b/promo-timeline-app/src/catalog.html
@@ -69,7 +69,8 @@
         </div>
 
                 <!-- center Column: sub brands Management -->
-
+<div class="profile-promos-section is-hidden" id="subBrandsSection">
+   
         <div class="profile-box">
         <h1 id="subBrandsHeader">Select a Brand</h1>
         <p style="font-size: 0.9em; color: #555;">Manage sub-brands for the selected brand.</p>
@@ -101,6 +102,7 @@
             </div>
         </div>
     </div>
+ </div>
         <!-- Right Column: Products Management -->
         <div class="profile-promos-section is-hidden" id="productsSection">
             <div class="profile-box">
@@ -142,5 +144,6 @@
     </div>
 
     <script type="module" src="scripts/catalogApp.js"></script>
+    <div id="toast-container"></div>
 </body>
 </html>
