--- a/promo-timeline-app/src/login.html
+++ b/promo-timeline-app/src/login.html
@@ -38,5 +38,6 @@
      </div>
 
     <script type="module" src="scripts/loginApp.js"></script>
+    <div id="toast-container"></div>
 </body>
 </html>
