--- a/promo-timeline-app/src/promo-detail.html
+++ b/promo-timeline-app/src/promo-detail.html
@@ -119,7 +119,26 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="form-section">
+                        <h2>Linked Catalog Items</h2>
+                        <p style="font-size: 0.8em; color: #666; margin-top: -10px; margin-bottom: 15px;">
+                            Select one or more brands to filter the sub-brands and products available.
+                        </p>
+                        <div class="form-grid-container">
+                            <div class="input-group">
+                                <label for="promoBrands">Brands</label>
+                                <select id="promoBrands" name="promoBrands" multiple></select>
+                            </div>
+                            <div class="input-group">
+                                <label for="promoSubBrands">Sub-Brands</label>
+                                <select id="promoSubBrands" name="promoSubBrands" multiple></select>
+                            </div>
+                            <div class="input-group full-width">
+                                <label for="promoProducts">Products</label>
+                                <select id="promoProducts" name="promoProducts" multiple></select>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-section">
                         <h2>Categorization & Visuals</h2>
                         <div class="form-grid-container">
