pivo table progress

--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -65,6 +65,13 @@
                         <div id="row-drop-zone" class="dimension-list drop-zone"></div>
                     </div>
                 </div>
+                <!-- NEW: Horizontal Value Type Switcher -->
+                <div class="pivot-section value-section">
+                    <h3>Value to Display</h3>
+                    <div class="view-switcher horizontal-switcher" id="pivotValueSwitcher">
+                        <!-- Radio buttons will be dynamically generated here by the script -->
+                    </div>
+                </div>
             </div>
             <div id="pivot-table-root"></div>
         </div>
