all good apart from the total in the pivot section. Then fix the insert table of the edit and create pormo and the site should be good to go

--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -52,8 +52,11 @@
 
         <!-- Container for the Interactive Pivot Builder and Table -->
         <div id="interactive-pivot-container" class="hidden-view">
-             <div id="pivot-builder-container">
-                <h2>Interactive Table Builder</h2>
+            <div id="pivot-builder-container">
+                <div class="report-header">
+                    <h2>Interactive Table Builder</h2>
+                    <button id="downloadPivotBtn" class="download-button">Download CSV</button>
+                </div>
                 <p>Drag categories into the "Rows" box to build your report. The table will update automatically.</p>
                 <div class="pivot-builder">
                     <div class="pivot-section">
