--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -103,6 +103,7 @@
                         <button class="multiselect-header filter-icon">Find in table <span> 🔍</span></button>
                         <a href="create-promo.html" class="create-button">➕ New Promo
                         </a>
+                        <button class="download-button" data-table-id="userPromosTable">Download CSV</button>
                     </div>
                 </div>
                 <div class="promo-table-container">
