new logic for promo creation and update

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -101,7 +101,7 @@
                     <div class="promo-controls-container"
                         style="display:flex;flex-direction: row;/* justify-content: space-around; */align-items: center;min-width:fit-content;">
                         <button class="multiselect-header filter-icon">Find in table <span> 🔍</span></button>
-                        <a href="create-promo.html" class="create-button">➕ New Promo
+                        <a href="promo-form.html" class="create-button">➕ New Promo
                         </a>
                         <button class="download-button" data-table-id="userPromosTable">Download CSV</button>
                     </div>
