--- a/promo-timeline-app/src/set-password.html
+++ b/promo-timeline-app/src/set-password.html
@@ -8,6 +8,27 @@
     <link rel="icon" href="img/favicon%20small.ico" type="image/png">
 </head>
 <body>
+    <script>
+        // *** CLIENT-SIDE REDIRECT CHECK (SAFEGUARD) ***
+        // If Supabase falls back to the bare directory URL (e.g., .../src/#token), 
+        // the browser loads the directory and hits a 404. 
+        // This script checks if the token is present but the file name is missing,
+        // and forces a reload to the correct file path to fix the 404.
+        (function() {
+            if (window.location.hash.includes('access_token') || window.location.hash.includes('recovery_token')) {
+                const currentPath = window.location.pathname.toLowerCase();
+                // Check if the current URL does NOT already end in the expected filename
+                if (!currentPath.endsWith('/set-password.html')) {
+                    // Extract the hash fragment (the token data)
+                    const hash = window.location.hash;
+                    // Force navigation to the correct file with the token attached
+                    window.location.replace('./set-password.html' + hash);
+                    return; // Stop execution to prevent errors before the redirect happens
+                }
+            }
+        })();
+    </script>
+
     <div class="login-page-wrapper" style="height: 98vh;">
         <div class="login-form-section">
             <div class="login-box">
