--- a/promo-timeline-app/src/login.html
+++ b/promo-timeline-app/src/login.html
@@ -28,7 +28,7 @@
                          <input type="password" id="password" name="password" required>
                          </div>
                          <button type="submit" id="signInButton">Sign In</button>
-                         <button type="button" id="resetPasswordButton">Reset Password</button>
+                         <button type="button" id="resetPasswordButton">(Re)set Password</button>
                     </form>
 
                     <p id="authMessage" class="auth-message"></p>
