--- a/promo-timeline-app/src/set-password.html
+++ b/promo-timeline-app/src/set-password.html
@@ -3,38 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Set Your Password - PerfectDraft</title>
+    <title>Reset Your Password - PerfectDraft</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/favicon%20small.ico" type="image/png">
 </head>
 <body>
-    <script>
-        // *** CLIENT-SIDE REDIRECT CHECK (SAFEGUARD) ***
-        // If Supabase falls back to the bare directory URL (e.g., .../src/#token), 
-        // the browser loads the directory and hits a 404. 
-        // This script checks if the token is present but the file name is missing,
-        // and forces a reload to the correct file path to fix the 404.
-        (function() {
-            if (window.location.hash.includes('access_token') || window.location.hash.includes('recovery_token')) {
-                const currentPath = window.location.pathname.toLowerCase();
-                // Check if the current URL does NOT already end in the expected filename
-                if (!currentPath.endsWith('/set-password.html')) {
-                    // Extract the hash fragment (the token data)
-                    const hash = window.location.hash;
-                    // Force navigation to the correct file with the token attached
-                    window.location.replace('./set-password.html' + hash);
-                    return; // Stop execution to prevent errors before the redirect happens
-                }
-            }
-        })();
-    </script>
-
     <div class="login-page-wrapper" style="height: 98vh;">
         <div class="login-form-section">
             <div class="login-box">
-                <h1>Welcome! Set Your Password</h1>
-                <p>Please create a secure password for your new account.</p>
+                <h1>(Re)Set Your Password</h1>
+                <p>Please enter the code from your email and create a (new) password.</p>
                 <form id="setPasswordForm" novalidate>
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="otp">Reset Code</label>
+                        <input type="text" id="otp" required>
+                    </div>
                     <div class="input-group">
                         <label for="password">New Password</label>
                         <input type="password" id="password" required>
@@ -44,7 +31,7 @@
                         <input type="password" id="confirmPassword" required>
                     </div>
                     <div id="passwordError" class="auth-message" style="color: red; display: none;"></div>
-                    <button type="submit">Set Password and Login</button>
+                    <button type="submit">Reset Password</button>
                 </form>
                 <p id="authMessage" class="auth-message"></p>
             </div>
